fix generator spinner position on mobile

--- a/app/components/GeneratorDashboardSkeleton/generator-dashboard-skeleton.scss
+++ b/app/components/GeneratorDashboardSkeleton/generator-dashboard-skeleton.scss
@@ -1,7 +1,7 @@
 .box-generator-skeleton {
 
   @include mobile-medium {
-    top: 300px;
+    top: 250px;
     margin : 0 auto;
     position: relative;
     padding-left: 0;
