--- a/app/style/components/loaders/_spinner.scss
+++ b/app/style/components/loaders/_spinner.scss
@@ -13,7 +13,7 @@ $spinner-color : rgba(0, 0, 0, 0.75) ;
   min-height: 200px;
 
   @include mobile-medium{
-    top: - 100px;
+    top: -45px;
     min-height: 100px;
   }
 }
